{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 62,
  "lineage": "10ea21fd-5c58-2c64-4ff4-24cbc3608ea7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "pilot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:subnet/subnet-02dca42218e70700e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4086,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dca42218e70700e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "617166695927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f3d41f537e57647b"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:subnet/subnet-02dca42218e70700e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4086,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dca42218e70700e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "617166695927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f3d41f537e57647b"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:subnet/subnet-0ec23203b61e25425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec23203b61e25425",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "617166695927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f3d41f537e57647b"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "pilot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:vpc/vpc-0f3d41f537e57647b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e63b6ffcece911a9",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-024383c446644d70c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3d41f537e57647b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08e6452816891b0ce",
            "owner_id": "617166695927"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "role",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cloud-core",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081b0a6eac00b4f53",
            "arn": "arn:aws:ec2:us-east-1:617166695927:instance/i-05a7c709c5e66db79",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a7c709c5e66db79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6i.large",
            "ipv6_address_count": 0,
            "key_name": "chiave-aws-portatile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-083dee9c6f2b5b8c9",
            "private_dns": "ip-172-31-89-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.89.15",
            "public_dns": "ec2-3-84-89-49.compute-1.amazonaws.com",
            "public_ip": "3.84.89.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:617166695927:key/ffeaf071-2774-44f1-90c0-239218407fc6",
                "throughput": 125,
                "volume_id": "vol-0cfc4c06e2172dc76",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "continuum-cloud-core-20260913162533458700000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02dca42218e70700e",
            "tags": {
              "Name": "continuum-cloud-core",
              "Role": "cloud-core"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "continuum-cloud-core",
              "Project": "continuum-simulator",
              "Role": "cloud-core"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "continuum-cloud-core-root",
              "Role": "cloud-core"
            },
            "vpc_security_group_ids": [
              "sg-0c592a8c87cca9edf"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_subnet.pilot",
            "data.aws_vpc.pilot"
          ]
        },
        {
          "index_key": "edge",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081b0a6eac00b4f53",
            "arn": "arn:aws:ec2:us-east-1:617166695927:instance/i-029c38e33a9daf3b4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029c38e33a9daf3b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "chiave-aws-portatile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06de2f38717c160cb",
            "private_dns": "ip-172-31-95-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.95.134",
            "public_dns": "ec2-100-26-97-31.compute-1.amazonaws.com",
            "public_ip": "100.26.97.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:617166695927:key/ffeaf071-2774-44f1-90c0-239218407fc6",
                "throughput": 125,
                "volume_id": "vol-0fada1bd49ceee4c1",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "continuum-edge-20260913162533458800000004"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02dca42218e70700e",
            "tags": {
              "Name": "continuum-edge",
              "Role": "edge"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "continuum-edge",
              "Project": "continuum-simulator",
              "Role": "edge"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "continuum-edge-root",
              "Role": "edge"
            },
            "vpc_security_group_ids": [
              "sg-0a31a05340a609437"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_subnet.pilot",
            "data.aws_vpc.pilot"
          ]
        },
        {
          "index_key": "simulator",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081b0a6eac00b4f53",
            "arn": "arn:aws:ec2:us-east-1:617166695927:instance/i-0c6ee9909dc2c9db6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6ee9909dc2c9db6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "chiave-aws-portatile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc7f15dea0addb96",
            "private_dns": "ip-172-31-87-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.87.172",
            "public_dns": "ec2-44-204-27-64.compute-1.amazonaws.com",
            "public_ip": "44.204.27.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:617166695927:key/ffeaf071-2774-44f1-90c0-239218407fc6",
                "throughput": 125,
                "volume_id": "vol-00d2f9a45b6ed6d1d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "continuum-simulator-20260913162533459000000005"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02dca42218e70700e",
            "tags": {
              "Name": "continuum-simulator",
              "Role": "simulator"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "continuum-simulator",
              "Project": "continuum-simulator",
              "Role": "simulator"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "continuum-simulator-root",
              "Role": "simulator"
            },
            "vpc_security_group_ids": [
              "sg-04378fea2338a7815"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_subnet.pilot",
            "data.aws_vpc.pilot"
          ]
        },
        {
          "index_key": "workers",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081b0a6eac00b4f53",
            "arn": "arn:aws:ec2:us-east-1:617166695927:instance/i-0798ceda20929ec55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0798ceda20929ec55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "chiave-aws-portatile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041402f42cc853aac",
            "private_dns": "ip-172-31-91-245.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.91.245",
            "public_dns": "ec2-54-197-16-195.compute-1.amazonaws.com",
            "public_ip": "54.197.16.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:617166695927:key/ffeaf071-2774-44f1-90c0-239218407fc6",
                "throughput": 125,
                "volume_id": "vol-0e262474a03573436",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "continuum-workers-20260913162533458600000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02dca42218e70700e",
            "tags": {
              "Name": "continuum-workers",
              "Role": "workers"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "continuum-workers",
              "Project": "continuum-simulator",
              "Role": "workers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "volume_tags": {
              "Name": "continuum-workers-root",
              "Role": "workers"
            },
            "vpc_security_group_ids": [
              "sg-0fa38b4862615a63b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_subnet.pilot",
            "data.aws_vpc.pilot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloud_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group/sg-0c592a8c87cca9edf",
            "description": "Security group for the continuum Cloud Core host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound access for bootstrap, image downloads and application traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c592a8c87cca9edf",
            "ingress": [
              {
                "cidr_blocks": [
                  "79.40.217.238/32"
                ],
                "description": "SSH administration from the configured administrator CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Kafka Cloud Worker output traffic to Cloud Core",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa38b4862615a63b"
                ],
                "self": false,
                "to_port": 9094
              },
              {
                "cidr_blocks": [],
                "description": "Kafka traffic from Edge to Cloud Core",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a31a05340a609437"
                ],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [],
                "description": "Kafka traffic from Workers to Cloud Core",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa38b4862615a63b"
                ],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "continuum-cloud-core-20260913162533458700000003",
            "name_prefix": "continuum-cloud-core-",
            "owner_id": "617166695927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "continuum-cloud-core",
              "Role": "cloud-core"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "continuum-cloud-core",
              "Project": "continuum-simulator",
              "Role": "cloud-core"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3d41f537e57647b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.pilot"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group/sg-0a31a05340a609437",
            "description": "Security group for the continuum Edge host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound access for bootstrap, image downloads and application traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a31a05340a609437",
            "ingress": [
              {
                "cidr_blocks": [
                  "79.40.217.238/32"
                ],
                "description": "SSH administration from the configured administrator CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "MQTT telemetry and replay control from Simulator to Edge",
                "from_port": 18830,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04378fea2338a7815"
                ],
                "self": false,
                "to_port": 18842
              }
            ],
            "name": "continuum-edge-20260913162533458800000004",
            "name_prefix": "continuum-edge-",
            "owner_id": "617166695927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "continuum-edge",
              "Role": "edge"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "continuum-edge",
              "Project": "continuum-simulator",
              "Role": "edge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3d41f537e57647b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.pilot"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group/sg-075fe5fbe3c77c256",
            "description": "Private PostgreSQL access from cloud-core only",
            "egress": [],
            "id": "sg-075fe5fbe3c77c256",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c592a8c87cca9edf"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "continuum-rds-20260913162533459100000006",
            "name_prefix": "continuum-rds-",
            "owner_id": "617166695927",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "continuum-simulator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3d41f537e57647b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.pilot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "simulator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group/sg-04378fea2338a7815",
            "description": "Security group for the continuum Simulator host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound access for bootstrap, image downloads and application traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04378fea2338a7815",
            "ingress": [
              {
                "cidr_blocks": [
                  "79.40.217.238/32"
                ],
                "description": "SSH administration from the configured administrator CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "continuum-simulator-20260913162533459000000005",
            "name_prefix": "continuum-simulator-",
            "owner_id": "617166695927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "continuum-simulator",
              "Role": "simulator"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "continuum-simulator",
              "Project": "continuum-simulator",
              "Role": "simulator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3d41f537e57647b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.pilot"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group/sg-0fa38b4862615a63b",
            "description": "Security group for the continuum Worker host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound access for bootstrap, image downloads and application traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa38b4862615a63b",
            "ingress": [
              {
                "cidr_blocks": [
                  "79.40.217.238/32"
                ],
                "description": "SSH administration from the configured administrator CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "continuum-workers-20260913162533458600000002",
            "name_prefix": "continuum-workers-",
            "owner_id": "617166695927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "continuum-workers",
              "Role": "workers"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "continuum-workers",
              "Project": "continuum-simulator",
              "Role": "workers"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3d41f537e57647b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.pilot"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cloud-core",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-0b282277dd492eae8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Outbound access for bootstrap, image downloads and application traffic",
            "from_port": null,
            "id": "sgr-0b282277dd492eae8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c592a8c87cca9edf",
            "security_group_rule_id": "sgr-0b282277dd492eae8",
            "tags": {
              "Name": "cloud-core-all-outbound",
              "Role": "cloud-core"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cloud-core-all-outbound",
              "Project": "continuum-simulator",
              "Role": "cloud-core"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        },
        {
          "index_key": "edge",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-055deb7c9be5ba246",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Outbound access for bootstrap, image downloads and application traffic",
            "from_port": null,
            "id": "sgr-055deb7c9be5ba246",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a31a05340a609437",
            "security_group_rule_id": "sgr-055deb7c9be5ba246",
            "tags": {
              "Name": "edge-all-outbound",
              "Role": "edge"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "edge-all-outbound",
              "Project": "continuum-simulator",
              "Role": "edge"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        },
        {
          "index_key": "simulator",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-0e8838abb986c3e25",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Outbound access for bootstrap, image downloads and application traffic",
            "from_port": null,
            "id": "sgr-0e8838abb986c3e25",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04378fea2338a7815",
            "security_group_rule_id": "sgr-0e8838abb986c3e25",
            "tags": {
              "Name": "simulator-all-outbound",
              "Role": "simulator"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "simulator-all-outbound",
              "Project": "continuum-simulator",
              "Role": "simulator"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        },
        {
          "index_key": "workers",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-0de7d9070183dc385",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Outbound access for bootstrap, image downloads and application traffic",
            "from_port": null,
            "id": "sgr-0de7d9070183dc385",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa38b4862615a63b",
            "security_group_rule_id": "sgr-0de7d9070183dc385",
            "tags": {
              "Name": "workers-all-outbound",
              "Role": "workers"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "workers-all-outbound",
              "Project": "continuum-simulator",
              "Role": "workers"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "edge_to_cloud_core_kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-0e088e71ca05fd0ea",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Kafka traffic from Edge to Cloud Core",
            "from_port": 9092,
            "id": "sgr-0e088e71ca05fd0ea",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a31a05340a609437",
            "security_group_id": "sg-0c592a8c87cca9edf",
            "security_group_rule_id": "sgr-0e088e71ca05fd0ea",
            "tags": {
              "Name": "edge-to-cloud-core-kafka",
              "Role": "cloud-core"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "edge-to-cloud-core-kafka",
              "Project": "continuum-simulator",
              "Role": "cloud-core"
            },
            "to_port": 9092
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "data.aws_vpc.pilot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_cloud_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-0221fa976c54a3253",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0221fa976c54a3253",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c592a8c87cca9edf",
            "security_group_id": "sg-075fe5fbe3c77c256",
            "security_group_rule_id": "sgr-0221fa976c54a3253",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "continuum-simulator"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.rds",
            "data.aws_vpc.pilot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "simulator_to_edge_mqtt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-0b5ef62a403dbc0ef",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "MQTT telemetry and replay control from Simulator to Edge",
            "from_port": 18830,
            "id": "sgr-0b5ef62a403dbc0ef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04378fea2338a7815",
            "security_group_id": "sg-0a31a05340a609437",
            "security_group_rule_id": "sgr-0b5ef62a403dbc0ef",
            "tags": {
              "Name": "simulator-to-edge-mqtt",
              "Role": "edge"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "simulator-to-edge-mqtt",
              "Project": "continuum-simulator",
              "Role": "edge"
            },
            "to_port": 18842
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "data.aws_vpc.pilot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cloud-core",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-05833ce3c407eab7b",
            "cidr_ipv4": "79.40.217.238/32",
            "cidr_ipv6": null,
            "description": "SSH administration from the configured administrator CIDR",
            "from_port": 22,
            "id": "sgr-05833ce3c407eab7b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c592a8c87cca9edf",
            "security_group_rule_id": "sgr-05833ce3c407eab7b",
            "tags": {
              "Name": "cloud-core-ssh-admin",
              "Role": "cloud-core"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cloud-core-ssh-admin",
              "Project": "continuum-simulator",
              "Role": "cloud-core"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        },
        {
          "index_key": "edge",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-06875d80b537587c9",
            "cidr_ipv4": "79.40.217.238/32",
            "cidr_ipv6": null,
            "description": "SSH administration from the configured administrator CIDR",
            "from_port": 22,
            "id": "sgr-06875d80b537587c9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a31a05340a609437",
            "security_group_rule_id": "sgr-06875d80b537587c9",
            "tags": {
              "Name": "edge-ssh-admin",
              "Role": "edge"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "edge-ssh-admin",
              "Project": "continuum-simulator",
              "Role": "edge"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        },
        {
          "index_key": "simulator",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-02ae664941b10d18b",
            "cidr_ipv4": "79.40.217.238/32",
            "cidr_ipv6": null,
            "description": "SSH administration from the configured administrator CIDR",
            "from_port": 22,
            "id": "sgr-02ae664941b10d18b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04378fea2338a7815",
            "security_group_rule_id": "sgr-02ae664941b10d18b",
            "tags": {
              "Name": "simulator-ssh-admin",
              "Role": "simulator"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "simulator-ssh-admin",
              "Project": "continuum-simulator",
              "Role": "simulator"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        },
        {
          "index_key": "workers",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-0c46d791fa4b8d79b",
            "cidr_ipv4": "79.40.217.238/32",
            "cidr_ipv6": null,
            "description": "SSH administration from the configured administrator CIDR",
            "from_port": 22,
            "id": "sgr-0c46d791fa4b8d79b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa38b4862615a63b",
            "security_group_rule_id": "sgr-0c46d791fa4b8d79b",
            "tags": {
              "Name": "workers-ssh-admin",
              "Role": "workers"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "workers-ssh-admin",
              "Project": "continuum-simulator",
              "Role": "workers"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.edge",
            "aws_security_group.simulator",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "workers_to_cloud_core_kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-05ede4b29dfeface2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Kafka traffic from Workers to Cloud Core",
            "from_port": 9092,
            "id": "sgr-05ede4b29dfeface2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fa38b4862615a63b",
            "security_group_id": "sg-0c592a8c87cca9edf",
            "security_group_rule_id": "sgr-05ede4b29dfeface2",
            "tags": {
              "Name": "workers-to-cloud-core-kafka",
              "Role": "cloud-core"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "workers-to-cloud-core-kafka",
              "Project": "continuum-simulator",
              "Role": "cloud-core"
            },
            "to_port": 9092
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "workers_to_cloud_core_kafka_output",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617166695927:security-group-rule/sgr-09e3c25ac17de4d19",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Kafka Cloud Worker output traffic to Cloud Core",
            "from_port": 9094,
            "id": "sgr-09e3c25ac17de4d19",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fa38b4862615a63b",
            "security_group_id": "sg-0c592a8c87cca9edf",
            "security_group_rule_id": "sgr-09e3c25ac17de4d19",
            "tags": {
              "Name": "workers-to-cloud-core-kafka-output",
              "Role": "cloud-core"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "workers-to-cloud-core-kafka-output",
              "Project": "continuum-simulator",
              "Role": "cloud-core"
            },
            "to_port": 9094
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloud_core",
            "aws_security_group.workers",
            "data.aws_vpc.pilot"
          ]
        }
      ]
    }
  ]
}